--- a/index.html
+++ b/index.html
@@ -453,25 +453,25 @@
               <div class="bank-details">
                 <div class="bank-item">
                   <div class="bank-info">
-                    <div class="bank-logo"><img src="assets/bjb.png" alt="BJB Logo"></div>
+                    <div class="bank-logo"><img src="assets/bca.png" alt="BCA Logo"></div>
                     <div class="bank-text">
                       <h4>Bank BJB</h4>
-                      <p class="account-number">1234567890</p>
+                      <p class="account-number">1291017601</p>
                       <p class="account-name">a.n. Adinda Farisa Ramdhiani</p>
                     </div>
                   </div>
-                  <button class="copy-btn" data-clipboard="1234567890"><i class="fas fa-copy"></i> Salin Nomor</button>
+                  <button class="copy-btn" data-clipboard="1291017601"><i class="fas fa-copy"></i> Salin Nomor</button>
                 </div>
                 <div class="bank-item">
                   <div class="bank-info">
                     <div class="bank-logo"><img src="assets/bjb.png" alt="BJB Logo"></div>
                     <div class="bank-text">
                       <h4>Bank BJB</h4>
-                      <p class="account-number">0987654321</p>
+                      <p class="account-number">0119077168100</p>
                       <p class="account-name">a.n. Ilfan Naufal Zakaria</p>
                     </div>
                   </div>
-                  <button class="copy-btn" data-clipboard="0987654321"><i class="fas fa-copy"></i> Salin Nomor</button>
+                  <button class="copy-btn" data-clipboard="0119077168100"><i class="fas fa-copy"></i> Salin Nomor</button>
                 </div>
               </div>
             </article>
